test/ui/src/compile_fail/std/emit_props_missing_interpolated.rs
fn main() {
    emit::emit!("template {x}");
}
