test/ui/src/compile_fail/std/emit_props_missing_interpolated.stderr
error[E0425]: cannot find value `x` in this scope
 --> src/compile_fail/std/emit_props_missing_interpolated.rs:2:28
  |
2 |     emit::emit!("template {x}");
  |                            ^ not found in this scope
